force-app/main/default/objects/LLC_BI__Checklist__c/fields/LLC_BI__Category__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Category__c</fullName>
    <description>This optional field is automatically populated with the value that is used to group checklists together.</description>
    <inlineHelpText>This optional field is automatically populated with the value that is used to group checklists together.</inlineHelpText>
    <label>Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>