force-app/main/default/objects/LLC_BI__Checklist__c/fields/LLC_BI__Is_Template__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this field to indicate this checklist is a template.</description>
    <inlineHelpText>Check this field to indicate this checklist is a template.</inlineHelpText>
    <label>Is Template</label>
    <type>Checkbox</type>
</CustomField>