force-app/main/default/objects/LLC_BI__Checklist__c/fields/LLC_BI__Product_Package__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the related Product Package record which this Checklist pertains.</description>
    <label>Product Package</label>
    <referenceTo>LLC_BI__Product_Package__c</referenceTo>
    <relationshipLabel>Checklists</relationshipLabel>
    <relationshipName>Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>