force-app/main/default/objects/LLC_BI__Checklist__c/fields/LLC_BI__Status__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Status__c</fullName>
    <description>This required field contains the current state of this Checklist.</description>
    <inlineHelpText>This required field contains the current state of this Checklist.</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LLC_BI__Requirement_Statuses</valueSetName>
    </valueSet>
</CustomField>