force-app/main/default/objects/LLC_BI__Checklist__c/fields/LLC_BI__Treasury_Service__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Treasury_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the related Treasury Service record which this Checklist pertains.</description>
    <label>Treasury Service</label>
    <referenceTo>LLC_BI__Treasury_Service__c</referenceTo>
    <relationshipLabel>Checklists</relationshipLabel>
    <relationshipName>Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>